# template_esp_idf_ceedling

./: Makefile  README.md  project.yml  sdkconfig
components/leds/: component.mk  leds.c
components/leds/include/: leds.h
components/leds/test/: test_leds.c
components/tasks/: tasks.c
components/tasks/include/: tasks.h
main/: CMakeLists.txt  blink.c
